add support for nekoo items