@@ -1,6 +1,5 @@
 package su.nightexpress.nexshop.hook;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class HookId {
@@ -26,14 +25,13 @@ public class HookId {
     public static final String KINGDOMS               = "Kingdoms";
     public static final String ADVANCED_REGION_MARKET = "AdvancedRegionMarket";
 
-    public static final String ORAXEN           = "Oraxen";
+    public static final String WAKAME           = "Wakame";
     public static final String ITEMS_ADDER      = "ItemsAdder";
-    public static final String MMOITEMS         = "MMOItems";
     public static final String EXCELLENT_CRATES = "ExcellentCrates";
 
     public static final String UPGRADEABLE_HOPPERS = "UpgradeableHoppers";
 
     public static List<String> getItemPluginNames() {
-        return Arrays.asList(ORAXEN, ITEMS_ADDER, MMOITEMS);
+        return List.of(WAKAME);
     }
 }
